alterações de fonte e baixar curriculo comentado

--- a/formulario.html
+++ b/formulario.html
@@ -39,7 +39,7 @@
         <button class="botao" type="submit">Enviar</button>
         <button class="botao" type="reset">Cancelar</button>
         <br>
-        <button id="botaovoltar" type="button"><a href="index.html">Voltar</a></button>
+        <button id="botaovoltar" type="button"><a href="index.html">Voltar para o início</a></button>
     </div>
 
 </fieldset>
