--- a/pagleo.html
+++ b/pagleo.html
@@ -74,7 +74,7 @@
     </div>
     <div>
         <h3>Contato:</h3>
-        <p>Para acessar o formulário de contato, clique no E-mail a seguir:</p>
+        <p><strong><ins><big>Para acessar o formulário de contato, clique no E-mail a seguir:</big></ins></strong></p>
         <img src="images/o-email.png" alt="icone de email">
         E-mail: <a href="formulario.html">leo.velame10@gmail.com</a> <br>
     </div>
